--- a/CarRental/src/main/resources/templates/user-datxe.html
+++ b/CarRental/src/main/resources/templates/user-datxe.html
@@ -68,6 +68,24 @@
             <div id="vehicle-list" class="vehicle-grid"></div>
         </div>
 
+        <div class="card">
+            <h2>Thời gian & khoảng cách</h2>
+            <div class="rental-options">
+                <div class="form-group">
+                    <label for="start-date">Ngày bắt đầu</label>
+                    <input type="date" id="start-date" />
+                </div>
+                <div class="form-group">
+                    <label for="end-date">Ngày kết thúc</label>
+                    <input type="date" id="end-date" />
+                </div>
+                <div class="form-group">
+                    <label>Quãng đường tới trạm</label>
+                    <div id="distance-display">Chưa xác định</div>
+                </div>
+            </div>
+        </div>
+
         <div class="book-now-action">
             <button class="btn-book-now" id="btn-book">
                 <i class="fas fa-shopping-cart"></i> Đặt xe ngay
