--- a/CarRental/src/main/resources/templates/user-datxe.html
+++ b/CarRental/src/main/resources/templates/user-datxe.html
@@ -103,6 +103,15 @@
             </div>
         </div>
 
+        <div class="card" id="document-upload-card">
+            <h2>Giấy tờ thuê xe</h2>
+            <p id="document-status" class="doc-status">Đang kiểm tra trạng thái giấy tờ...</p>
+            <div class="doc-actions">
+                <button type="button" class="btn-upload-doc" id="btn-upload-idcard">Tải CCCD/CMND</button>
+                <button type="button" class="btn-upload-doc" id="btn-upload-license">Tải GPLX</button>
+            </div>
+        </div>
+
         <div class="book-now-action">
             <button class="btn-book-now" id="btn-book">
                 <i class="fas fa-shopping-cart"></i> Đặt xe ngay
