--- a/CarRental/src/main/resources/static/css/thanhtoan.css
+++ b/CarRental/src/main/resources/static/css/thanhtoan.css
@@ -386,3 +386,25 @@ body {
         margin-bottom: 30px;
     }
 }
+
+/* ========= POPUP QR ========== */
+#qrModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.55);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+}
+
+#qrModal .qr-box {
+    background: #ffffff;
+    padding: 25px;
+    border-radius: 15px;
+    width: 380px;
+    text-align: center;
+}
