Align history statuses and global station search

--- a/CarRental/src/main/resources/templates/thanhtoan.html
+++ b/CarRental/src/main/resources/templates/thanhtoan.html
@@ -23,7 +23,9 @@
     <div class="content-area">
         <div class="top-bar">
             <div class="search-bar">
-                <input type="text" placeholder="Tìm điểm thuê gần bạn">
+                <input id="station-search" type="text" placeholder="Tìm điểm thuê gần bạn">
+                <button id="btn-find-station" type="button"><i class="fas fa-location-crosshairs"></i></button>
+                <div id="station-hint" class="station-hint"></div>
             </div>
             <div class="auth-buttons">
                 <div class="user-info">
@@ -140,6 +142,7 @@
     </div>
 </div>
 
+<script src="/js/station-search.js"></script>
 <script src="/js/thanhtoan.js"></script>
 </body>
 </html>
