--- a/CarRental/src/main/resources/templates/user-home.html
+++ b/CarRental/src/main/resources/templates/user-home.html
@@ -42,7 +42,9 @@
     <div class="content-area">
         <div class="top-bar">
             <div class="search-bar">
-                <input type="text" placeholder="Tìm điểm thuê gần bạn">
+                <input id="station-search" type="text" placeholder="Tìm điểm thuê gần bạn">
+                <button id="btn-find-station" type="button"><i class="fas fa-location-crosshairs"></i></button>
+                <div id="station-hint" class="station-hint"></div>
             </div>
 
             <div class="auth-buttons">
@@ -76,6 +78,7 @@
     </div>
 </div>
 
+<script th:src="@{/js/station-search.js}"></script>
 <script th:src="@{/js/map.js}"></script>
 </body>
 </html>
