--- a/CarRental/src/main/resources/templates/user-hosocanhan.html
+++ b/CarRental/src/main/resources/templates/user-hosocanhan.html
@@ -27,7 +27,9 @@
 
         <div class="top-bar">
             <div class="search-bar">
-                <input type="text" placeholder="Tìm điểm thuê gần bạn">
+                <input id="station-search" type="text" placeholder="Tìm điểm thuê gần bạn">
+                <button id="btn-find-station" type="button"><i class="fas fa-location-crosshairs"></i></button>
+                <div id="station-hint" class="station-hint"></div>
             </div>
 
             <div class="auth-buttons">
@@ -104,6 +106,7 @@
     </div>
 </div>
 
+<script src="/js/station-search.js"></script>
 <script>
     async function loadProfile() {
         const res = await fetch("/api/renter/profile");
